pagination issues and scrollbars changed

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,25 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+
+  /* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #79c9f9;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ffcb08;
+}
